--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-VITE_API_URL=http://localhost:8080/
-VITE_API_ENV=development
+# For production
+VITE_API_URL=https://checklist.vdcapp.in/backend/
+VITE_API_ENV=production
