--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 4000",
+    "dev": "vite --port 4000 --host",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview --port 4000"
+    "preview": "vite preview --port 4000 --host",
+    "serve": "vite preview --port 4000"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.61.5",
