--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.61.5",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
